@@ -5,4 +5,5 @@ RUN mvn clean package -DskipTests
 FROM openjdk:8-jre-slim
 COPY --from=build /target/major-0.0.1-SNAPSHOT.jar major.jar
 EXPOSE 8080
-ENTRYPOINT [ "java","-jar","major.jar" ]
+# ENTRYPOINT [ "java","-jar","major.jar" ]
+ENTRYPOINT ["java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "major.jar"]
